force-app/main/default/objects/Crop_Plot__c/Crop_Plot__c.object-meta.xml
<CustomObject>
    <description>Armazena os talhões vinculados às propriedades rurais cadastradas no CRM.</description>
    <label>Talhão</label>
    <nameField>
        <label>Talhão Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talhões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>