force-app/main/default/objects/Crop_Plot__c/fields/Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>Crop_Variety__c</fullName>
    <description>Armazena a variedade cultivada no talhão.</description>
    <inlineHelpText>Informe a variedade cultivada neste talhão.</inlineHelpText>
    <label>Variedade da Cultura</label>
    <length>80</length>
    <type>Text</type>
</CustomField>