force-app/main/default/objects/Crop_Plot__c/fields/Number_of_Plants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plants__c</fullName>
    <description>Armazena a quantidade de plantas existentes no talhão.</description>
    <inlineHelpText>Informe o número aproximado de plantas existentes neste talhão.</inlineHelpText>
    <label>Quantidade de Plantas</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>