force-app/main/default/objects/Crop_Plot__c/fields/Plant_Age__c.field-meta.xml
<CustomField>
    <fullName>Plant_Age__c</fullName>
    <description>Calcula automaticamente a idade das plantas com base no ano de plantio informado.</description>
    <formula>IF(
    ISBLANK(Planting_Year__c),
    NULL,
    YEAR(TODAY()) - Planting_Year__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este campo é calculado automaticamente a partir do campo Ano de Plantio.</inlineHelpText>
    <label>Idade das Plantas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>