force-app/main/default/objects/Crop_Plot__c/fields/Plant_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Plant_Spacing__c</fullName>
    <description>Armazena o espaçamento utilizado no plantio do talhão.</description>
    <inlineHelpText>Informe o espaçamento do plantio, por exemplo: 2,8m x 0,8m.</inlineHelpText>
    <label>Espaçamento das Plantas</label>
    <length>50</length>
    <type>Text</type>
</CustomField>