force-app/main/default/objects/Crop_Plot__c/fields/Planting_Year__c.field-meta.xml
<CustomField>
    <fullName>Planting_Year__c</fullName>
    <description>Armazena o ano em que o talhão foi plantado.</description>
    <inlineHelpText>Informe o ano de plantio do talhão, por exemplo: 2022.</inlineHelpText>
    <label>Ano de Plantio</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>