force-app/main/default/objects/Crop_Plot__c/fields/Plot_Area_Hectares__c.field-meta.xml
<CustomField>
    <fullName>Plot_Area_Hectares__c</fullName>
    <description>Armazena a área total do talhão em hectares.</description>
    <inlineHelpText>Informe a área aproximada deste talhão em hectares.</inlineHelpText>
    <label>Área do Talhão em Hectares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>