force-app/main/default/objects/Crop_Plot__c/fields/Rural_Property__c.field-meta.xml
<CustomField>
    <fullName>Rural_Property__c</fullName>
    <description>Relaciona o talhão à propriedade rural onde ele está localizado.</description>
    <inlineHelpText>Selecione a propriedade rural à qual este talhão pertence.</inlineHelpText>
    <label>Propriedade Rural</label>
    <referenceTo>Rural_Property__c</referenceTo>
    <relationshipLabel>Talhões</relationshipLabel>
    <relationshipName>Talhoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>